# workflows

./: .clang-format  .gitignore  .gitmodules  README.md
.github/: dependabot.yaml
.github/workflows/: ci.yaml  master.yml  pull_request.yml  test-fixtures.yml
autotools/: README.md  action.yml
codecov/: action.yml
commitlint/: action.yml
common/: action.yml
container/: README.md  action.yml
crate/: README.md  action.yml
format/: README.md  action.yml
generic/: README.md  action.yml
go/: README.md  action.yml
goreleaser/: README.md  action.yml
goreleaser/auto/: action.yml
meson/: README.md  action.yml
rust/: README.md  action.yml
tag/: action.yml
testdata/autotools/: Makefile  configure
testdata/autotools/src/: foo.c
testdata/autotools/tests/: test_foo.c
testdata/go/: go.mod  go.sum.license  main.go  main_test.go
testdata/meson/: meson.build
testdata/meson/src/: foo.c  foo.h
testdata/meson/tests/: test_foo.c
testdata/rust/: Cargo.toml
testdata/rust/src/: lib.rs
